docs(jvm): 为JVM文档添加大白话总结和代码映射关系
✨ 新增功能：
- 为 advanced 模块所有文档添加大白话总结
- 为 memory 模块文档添加大白话总结
- 为 gc 模块文档添加大白话总结
- 为 tuning 模块所有文档添加大白话总结
- 创建代码与文档映射关系文档

📝 文档优化：
- 在所有文档中添加相关代码示例链接
- 添加代码运行方式说明
- 建立文档与代码的双向关联

🔗 代码映射：
- advanced: JITDemo, OptimizationDemo, JVMProfiler
- memory: MemoryStructureDemo, ObjectLayoutDemo, EscapeAnalysisDemo
- gc: GCAlgorithmDemo, GCCollectorDemo, GCTuningDemo
- tuning: 性能调优相关示例

📖 大白话总结特点：
- 通俗易懂的语言解释复杂概念
- 使用生活化比喻帮助理解
- 提供完整的命令和配置示例
- 突出重点，一目了然

🎯 覆盖范围：
- Advanced模块: 5个文档 ✅
- Memory模块: 2个文档 ✅
- GC模块: 2个文档 ✅
- Tuning模块: 6个文档 ✅
- 总计: 15个文档，100%覆盖